@@ -1,0 +1,95 @@
+From eletter-return-306-dlc+sciencenews=sevenroot.org@lists.sciencenews.org Mon Jul  7 07:33:57 2003
+Return-Path: <eletter-return-306-dlc+sciencenews=sevenroot.org@lists.sciencenews.org>
+Received: from [66.33.90.123] (helo=ns2.dbinteractive.com)
+	by efwd.dnsix.com with smtp (Exim 3.36 #1)
+	id 19YtS5-0007Qd-00
+	for xxxxx@xxxxxxxxx.xxx Sat, 05 Jul 2003 13:16:09 -0700
+Received: (qmail 27761 invoked by uid 502); 5 Jul 2003 16:00:01 -0000
+Mailing-List: contact eletter-help@lists.sciencenews.org; run by ezmlm
+From: e-LETTER@lists.sciencenews.org
+Subject: Science News e-LETTER
+Precedence: bulk
+X-No-Archive: yes
+List-Post: <mailto:eletter@lists.sciencenews.org>
+List-Help: <mailto:eletter-help@lists.sciencenews.org>
+List-Unsubscribe: <mailto:eletter-unsubscribe@lists.sciencenews.org>
+List-Subscribe: <mailto:eletter-subscribe@lists.sciencenews.org>
+Delivered-To: mailing list eletter@lists.sciencenews.org
+Message-Id: <E19YtS5-0007Qd-00@efwd.dnsix.com>
+Bcc:
+Date: Sat, 05 Jul 2003 13:16:09 -0700
+X-Bogosity: Ham, spamicity=0.000000, algorithm=fisher
+Status: RO
+Content-Length: 3542
+Lines: 69
+
+WEEKLY e-LETTER from SCIENCE NEWS
+July 5, 2003
+
+This week's articles focus on the detection of five-quark particles, the rise of dengue fever in the Americas, the first example of an animal navigating by moonlight polarity, the use of viruses, bacteria, and fungi to engineer new structures, and more. The cover story looks at how human ancestors settled into one ecosystem after another. Food for Thought ponders the anticholesterol benefits of soy greens. MathTrek puzzles over alphamagic squares.
+
+==================================
+Science News is an award-winning weekly newsmagazine covering the most important research in all fields of science. Published since 1922, its 16 pages are packed with short, accurate articles that appeal to both general readers and scientists.
+----------------------------------
+To subscribe to Science News magazine, go to www.sciencenews.org
+==================================
+
+THIS WEEK'S FEATURED ARTICLES:
+
+[Physics]
+Wild Bunch: First five-quark particle turns up
+Physicists have uncovered strong evidence for a family of five-quark particles after decades of finding no subatomic particles with more than three of the fundamental building blocks known as quarks.
+http://www.sciencenews.org/20030705/fob1.asp
+
+[Behavior]
+Till IL-6 Do Us Part: Elderly caregivers show harmful immune effect
+Elderly people caring for their incapacitated spouses experienced dramatic average increases in the blood concentration of a protein involved in immune regulation, a trend that puts them at risk for a variety of serious illnesses.
+http://www.sciencenews.org/20030705/fob5.asp
+
+[Materials Science]
+Microbial Materials: Scientists co-opt viruses, bacteria, and fungi to build new structures
+Microorganisms can be coaxed into producing high-tech components and can themselves serve as valuable ingredients in new classes of materials.
+
+http://www.sciencenews.org/20030705/bob8.asp
+
+THIS WEEK'S ONLINE FEATURES:
+
+[MATHTREK]
+Alphamagic Squares
+http://www.sciencenews.org/20030705/mathtrek.asp
+
+[FOOD FOR THOUGHT]
+Soy Greens--The Coming Health Food?
+http://www.sciencenews.org/20030705/food.asp
+
+----------------------------------
+To subscribe to Science News magazine, go to www.sciencenews.org
+----------------------------------
+
+Week of July 5, 2003; Vol. 164 No. 1
+
+THIS WEEK'S TABLE OF CONTENTS: http://www.sciencenews.org/20030705/toc.asp
+
+References and sources for all articles are available online at www.sciencenews.org
+
+***********************************
+REGISTERED SUBSCRIBERS to the print edition of Science News also have online access to the full text of the following articles:
+
+[Biology]
+A Matter of Taste: Mutated fruit flies bypass the salt
+By creating mutant fruit flies with an impaired capacity to taste salt, researchers have identified several genes that contribute to this sensory system in insects.
+http://www.sciencenews.org/20030705/fob2.asp
+
+[Biomedicine]
+Lethal Emergence: Tracing the rise of dengue fever in the Americas
+Using the genetics of viruses, scientists have tracked a virulent form of dengue virus in Latin America back to its roots in India.
+http://www.sciencenews.org/20030705/fob3.asp
+
+[Zoology]
+Moonlighting: Beetles navigate by lunar polarity
+A south African dung beetle is the first animal found to align its path by detecting the polarization of moonlight.
+http:/%
+---------------------------------------------------------------------
+To unsubscribe, e-mail: eletter-unsubscribe@lists.sciencenews.org
+For additional commands, e-mail: eletter-help@lists.sciencenews.org
+
