@@ -1,5 +1,10 @@
 Revision history for Perl module URI::Find.
 
+Next
+    New Features
+    * Added a urifind program. (Darren Chamberlain)
+
+
 20100211  Thu Feb 11 04:02:26 PST 2010
     Bug Fixes
     * Finding URIs inside brackets was pretty badly broken by
